CHANGES
=======

- removed pipes, using pbx queues now
- added new cli 'capi show channels'

chan_capi-cm-0.6.5
------------------
- fixed compilation with Asterisk 1.0.7
- fixed call deflect if number is longer
- removed function VANITYNUMBER, this does not belong into channel drivers

chan_capi-cm-0.6.4
------------------
- don't do echo-squelch or gain if transfercapability is non-voice
- fix deadlock when changing to fax mode
- better capi message handling
- removed double memset to zero
- use safer copy_string function
- removed unneeded lockB3q
- avoid capi message number zero
- added locking rules
- fix ECT (use implicit ECT)
- fixed setting language for each interface
- fix wait for b-channel to go down on ECT.

chan_capi-cm-0.6.3
------------------
- fixed buffer overflow in overlap dial
- remove some compiler warnings

chan_capi-cm-0.6.2
------------------
- set some info variables when receiving fax
- added language support
- prepared devicestate(hint) support
- don't change early-B3 setting on conf error for CONNECT_B3
- small fixes in Makefile targets (thanks to Karsten Keil)
- don't send audio to local exchange when in TE mode.
- fix missing CONF messages when no interface is found
- small transfercap and overlapdial fix
- don't forward DTMF if in NT-mode and the line is not connected yet.
- fixed line interconnect
- b-channel handling better
- NT mode progress
- removed deadlock in faxreceive.
- initialize variable ocid
- correct use of timeoutms in native bridge
- use more common defines for mutex_lock/unlock and _log()
- clean up and OpenPBX portability.
- adapted to latest asterisk bridge function prototype.

chan_capi-cm-0.6.1
------------------
- fixed setting of redirecting number rdnis instead of cid.
- allow setting a callerid in the dial() command without changing
  the original channel callerid.
- added config 'defaultcid' to set a default caller id which will be
  used if dial option 'd' is specified.